1.2-ngld/build/testblitspeed.c.log
[1m../SDL-1.2.15/testblitspeed.c:87:73: [0m[0;1;31merror: [0m[1mno member named 'colorkey' in 'struct SDL_PixelFormat'[0m
        printf("  colorkey   : 0x%X\n", (unsigned int) surface->format->colorkey);
[0;1;32m                                                       ~~~~~~~~~~~~~~~  ^
[0m[1m../SDL-1.2.15/testblitspeed.c:119:57: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'SDL_OPENGLBLIT'[0m
        append_sdl_surface_flag(surface, f, sizeof (f), SDL_OPENGLBLIT);
[0;1;32m                                                        ^
[0m[1m../SDL-1.2.15/testblitspeed.c:45:81: [0m[0;1;30mnote: [0mexpanded from macro 'append_sdl_surface_flag'[0m
#define append_sdl_surface_flag(a, b, c, fl) __append_sdl_surface_flag(a, b, c, fl, " " #fl)
[0;1;32m                                                                                ^
[0m2 errors generated.
ERROR    root: [31mcompiler frontend failed to generate LLVM bitcode, halting[0m
